[package]
name = "microchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
tokio = {version = "1.36.0" ,features = ["full"]}
tokio-tungstenite = "0.21.0"
url = "2.5.0"
